tests/vm/valid/closure.pl.error
swipl error: exit status 2
ERROR: /tmp/TestPrologCompiler_VM_Goldenclosure3905401317/001/main.pl:13: user:main string_concat/3: Arguments are not sufficiently instantiated
